turn XHTML to HTML5 then remove unused css

--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<p><a href="RJ/rj.php">Go to boiler control</a></p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Welcome to Boiler Control</title>
+</head>
 
+<body>
+<p><a href="RJ/rj.php">Go to boiler control</a></p>
+</body>
+
+</html>
